--- a/maj/assets/css/index.css
+++ b/maj/assets/css/index.css
@@ -1,12 +1,12 @@
 /* //////////////////// style général //////////////////// */
 
 /* reset des marges extérieures et intérieures */
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-:root{
+:root {
     /* variables globales à modifier selon la charte graphique */
     --font-family: Roboto, sans-serif;
     --primary-color: #000000;
@@ -17,56 +17,57 @@
 }
 
 /* conteneurs */
-body{
+body {
     margin: 5%;
     font-family: var(--font-family);
     color: var(--primary-color);
 }
 
-header, main, footer{
+header,
+main,
+footer {
     /* mise en place de la grille */
     display: grid;
     grid-template-columns: repeat(12, 1fr);
 }
 
 /* titres */
-h1{
+h1 {
     font-size: 3vw;
 }
 
-h2{
+h2 {
     font-size: 2.5vw;
 }
 
 /* textes */
-p{
+p,
+ul {
     font-size: 1.4vw;
 }
 
 /* liens */
-a{
-    /* justify-self: flex-start; */
+a {
     font-size: 1.4vw;
     text-decoration: underline;
     text-decoration-thickness: 1px;
-    text-underline-offset: 10%;
     color: var(--primary-color);
     transition: 0.25s;
 }
 
 a:hover:not(#logo, #socials a),
-a:active:not(#logo, #socials a){
+a:active:not(#logo, #socials a) {
     color: var(--highlight-color);
     text-decoration-thickness: 2px;
 }
 
-.courant{
+.courant {
     color: var(--highlight-color);
     text-decoration-thickness: 2px;
 }
 
 /* images */
-img{
+img {
     display: block;
     margin: auto;
     width: 100%;
@@ -76,24 +77,26 @@ img{
 /* //////////////////// éléments du header //////////////////// */
 
 /* logo MAJ */
-header #logo{
+header #logo {
     grid-column: 1;
 }
 
-header #logo img{
+header #logo img {
     width: 24vw;
 }
 
 /* description acronyme */
-header #description{
+header #description {
     position: absolute;
     margin-left: 26.5%;
     font-size: 4vw;
     color: #dbdbdb;
 }
 
-/* entrer / qui ? */
-#entrer, #qui, header nav{
+/* entrer / qui ? / nav */
+#entrer,
+#qui,
+header nav {
     grid-column: 2 / span 11;
     align-self: flex-end;
     justify-self: flex-start;
@@ -102,20 +105,20 @@ header #description{
     font-size: 2vw;
 }
 
-#entrer svg{
+#entrer svg {
     width: 1.3vw;
 }
 
-#qui{
+#qui {
     display: none;
 }
 
 /* navbar */
-header nav{
+header nav {
     justify-self: auto;
 }
 
-header nav ul{
+header nav ul {
     display: flex;
     gap: 2%;
 }
@@ -124,7 +127,7 @@ header nav ul li {
     list-style-type: none;
 }
 
-header nav ul li a{
+header nav ul li a {
     font-size: 2vw;
     font-weight: bold;
     text-transform: lowercase;
@@ -132,17 +135,17 @@ header nav ul li a{
 
 /* //////////////////// éléments du main //////////////////// */
 
-main{
+main {
     margin: 8% 0 5% 0;
 }
 
 /* tous les éléments du main */
-main > *{
+main>* {
     grid-column: 1 / span 12;
 }
 
 /* accueil > à propos */
-#a-propos p:first-child{
+#a-propos p:first-child {
     font-size: 4vw;
     text-align: justify;
     hyphens: auto;
@@ -150,11 +153,11 @@ main > *{
     -ms-hyphens: auto;
 }
 
-#a-propos section:nth-child(even){
+#a-propos section:nth-child(even) {
     margin-top: 9%;
 }
 
-#a-propos section:nth-child(odd){
+#a-propos section:nth-child(odd) {
     margin-top: 6%;
 }
 
@@ -162,7 +165,7 @@ main > *{
     font-size: 3vw;
 }
 
-#a-propos section p{
+#a-propos section p {
     font-size: 2vw;
     text-align: justify;
     hyphens: auto;
@@ -171,17 +174,17 @@ main > *{
 }
 
 /* actualités > ticker + slider */
-#ticker{
+#ticker {
     margin-bottom: 4%;
-    overflow: hidden;;
+    overflow: hidden;
 }
 
 #ticker .splide__arrow,
-#ticker .splide__pagination{
+#ticker .splide__pagination {
     display: none;
 }
 
-#ticker .splide__slide{
+#ticker .splide__slide {
     display: flex;
     margin: 0 auto auto auto;
     padding: 0 3% 0 3%;
@@ -189,30 +192,30 @@ main > *{
     max-height: 8vw;
 }
 
-#ticker img{
+#ticker img {
     margin-right: 5px;
     width: auto;
     max-height: inherit;
 }
 
-#ticker p{
+#ticker p {
     margin: 0;
     font-size: 2vw;
 }
 
-#ticker p:first-of-type{
+#ticker p:first-of-type {
     font-weight: bold;
 }
 
-#slider{
+#slider {
     margin-bottom: 10%;
 }
 
-#slider .splide__arrow{
+#slider .splide__arrow {
     display: none;
 }
 
-#slider .splide__pagination{
+#slider .splide__pagination {
     top: 102%;
 }
 
@@ -225,12 +228,12 @@ main > *{
 }
 
 /* actualités > billets actualités */
-#actualites{
+#actualites {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
 
-.actualite{
+.actualite {
     grid-column: span 1;
     margin: 0 5% 5% 0;
     padding: 10%;
@@ -239,27 +242,28 @@ main > *{
     background-color: var(--bg-color);
 }
 
-.actualite:hover, .actualite:hover > *{
+.actualite:hover,
+.actualite:hover>* {
     cursor: pointer;
     color: var(--highlight-color);
+    text-decoration-thickness: 2px;
 }
 
-.actualite h1{
+.actualite h1 {
     font-size: 2vw;
     line-height: 1.2em;
 }
 
-.actualite p{
+.actualite p {
     margin-top: 2%;
     font-weight: normal;
 }
 
-.load-more{
+.load-more {
     justify-self: start;
     font-size: 1.4vw;
     text-decoration: underline;
     text-decoration-thickness: 1px;
-    text-underline-offset: 10%;
     color: var(--primary-color);
     background-color: transparent;
     border: none;
@@ -268,27 +272,17 @@ main > *{
     transition: 0.25s;
 }
 
-.load-more:hover{
+.load-more:hover {
     color: var(--highlight-color);
     text-decoration-thickness: 2px;
 }
 
-.no-js .load-more{
+.no-js .load-more {
     display: none;
 }
 
-/* .pagination{
-    margin-bottom: 5%;
-}
-
-.pagination nav{
-    display: flex;
-    justify-content: space-between;
-    gap: 2%;
-} */
-
 /* services > boutons */
-.accordion-button{
+.accordion-button {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -302,16 +296,17 @@ main > *{
     transition: 0.25s;
 }
 
-.accordion-button h1{
+.accordion-button h1 {
     font-size: 3vw;
 }
 
-.active, .accordion-button:hover{
+.active,
+.accordion-button:hover {
     /* si bouton actif ou en survol, changement de couleur */
     background-color: var(--highlight-color);
 }
 
-.accordion-button:after{
+.accordion-button:after {
     /* ajout du plus */
     content: '+';
     margin-right: 3%;
@@ -320,13 +315,13 @@ main > *{
     color: var(--primary-color);
 }
 
-.active:after{
+.active:after {
     /* si bouton actif, changement du plus en moins */
     content: "-";
 }
 
 /* services > accordion-panel */
-.accordion-panel{
+.accordion-panel {
     display: none;
     padding: 2%;
     max-height: 0;
@@ -334,130 +329,143 @@ main > *{
     transition: 0.2s ease-out;
 }
 
-.accordion-panel .partenaires{
+.accordion-panel .partenaires {
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
     margin-bottom: 2%;
 }
 
-.accordion-panel .partenaires img{
+.accordion-panel .partenaires img {
     margin: 1%;
     width: auto;
-    max-height: 65px;
+    max-height: 6vw;
 }
 
-.accordion-panel h2{
+.accordion-panel h2 {
     margin-top: 2%;
     margin-bottom: 0;
     font-size: 1.5vw;
 }
 
-.accordion-panel p:first-of-type{
+.accordion-panel p:first-of-type {
     margin-bottom: 1%;
 }
 
-.accordion-panel p:not(p:first-of-type){
+.accordion-panel p:not(p:first-of-type) {
     margin-bottom: 0;
 }
 
-.accordion-panel > #permanences-partenaires{
+.accordion-panel>#permanences-partenaires {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     text-align: center;
 }
 
-#permanences-partenaires figure{
+#permanences-partenaires figure {
     margin-top: 5%;
     margin-bottom: 5%;
 }
 
-#permanences-partenaires img{
+#permanences-partenaires img {
     margin-bottom: 5%;
     width: auto;
     max-height: 60px;
 }
 
-#permanences-partenaires h2{
+#permanences-partenaires h2 {
     font-size: 1.8vw;
 }
 
-/* actualités / services > articles */
-article img{
+/* actualités / services / adhésion / mentions légales > articles */
+.retour {
+    margin-bottom: 2%;
+}
+
+article img {
     margin-top: 2%;
     margin-bottom: 2%;
     width: 90%;
 }
 
-article > h1, h2, p{
+article>h1,
+h2 {
     margin-bottom: 1%;
 }
 
+article p {
+    margin-bottom: 2%;
+}
+
+article ul {
+    padding-left: 2%;
+}
+
 /* équipe */
-#equipe .membre{
+#equipe .membre {
     display: flex;
-    flex-wrap: nowrap;
+    flex-flow: row nowrap;
     align-items: center;
     column-gap: 2%;
     margin-bottom: 1%;
 }
 
-#equipe h1{
+#equipe h1 {
     font-size: 3.5vw;
 }
 
-#equipe h1 span{
+#equipe h1 span {
     text-transform: uppercase;
 }
 
-#equipe .membre .infos{
+#equipe .membre .infos {
     display: flex;
     flex-direction: column;
 }
 
-#equipe .membre .infos *{
+#equipe .membre .infos * {
     font-size: 1.2vw;
 }
 
-#equipe .membre .infos p:first-child{
+#equipe .membre .infos p:first-child {
     color: var(--highlight-secondary-color);
     text-transform: lowercase;
 }
 
 /* contact > formulaire */
-form{
-    margin-top: 1%;
+form {
     margin-bottom: 3%;
 }
 
-form div{
+form div {
     display: flex;
     flex-direction: column;
     margin-top: 1%;
 }
 
-form label{
+form label {
     margin-bottom: 1%;
 }
 
-form label span{
+form label span {
     color: var(--highlight-color);
 }
 
-form input, form select{
+form input,
+form select {
     padding: 0.5%;
 }
 
-form textarea{
+form textarea {
     padding: 0.5%;
 }
 
-input[type=submit]{
+input[type=submit] {
     align-self: flex-start;
 }
 
 /* contact > carte */
-iframe{
+iframe {
     margin-top: 2%;
     width: 100%;
     height: 300px;
@@ -465,21 +473,21 @@ iframe{
 
 /* //////////////////// éléments du footer //////////////////// */
 
-footer{
+footer {
     align-items: start;
     margin-top: 5%;
     width: 100%;
     /* border-top: solid 2px var(--bg-color); */
 }
 
-footer > div{
+footer>div {
     margin: 0;
     display: flex;
     flex-flow: column wrap;
 }
 
 /* partenaires */
-footer div:first-child{
+footer div:first-child {
     grid-column: 1 / span 12;
     flex-flow: row wrap;
     justify-content: flex-start;
@@ -488,63 +496,63 @@ footer div:first-child{
     width: 100%;
 }
 
-footer img{
-    margin-right: 1%;
+footer img {
+    margin: 0 2% 5% 0;
     width: auto;
-    max-height: 80px;
+    max-height: 7vw;
 }
 
-/* où nous trouver / adhésion / nous contacter / mentions légales */
-footer div:nth-child(2){
+/* maj */
+footer div:nth-child(2) {
     grid-column: span 12;
 }
 
-footer > div:nth-child(3){
-    grid-column: 1 / span 2;
-}
-
-footer > div:nth-child(4){
-    grid-column: 4 / span 2;
-}
-
-footer div:nth-child(5){
-    grid-column: 10 / span 2;
-}
-
-footer div:last-child{
-    grid-column: 10 / span 3;
-    grid-row-start: 4;
-}
-
-footer div:nth-child(2) p{
+footer div:nth-child(2) p {
     margin: 0;
 }
 
+/* adhésion */
+footer>div:nth-child(3) {
+    grid-column: 1 / span 2;
+}
+
+/* infos / réseaux sociaux */
+footer>div:nth-child(4) {
+    grid-column: 4 / span 2;
+}
+
 footer div:nth-child(3) p,
-footer div:nth-child(4) p{
+footer div:nth-child(4) p {
     margin-bottom: 5%;
 }
 
-footer a{
-    font-weight: normal;
-}
-
 /* logo réseaux sociaux */
-footer #socials{
+footer #socials {
     margin: 5% 0 0 0;
 }
 
-footer #socials a{
+footer #socials a {
     text-decoration: none;
 }
 
-footer svg{
+footer svg {
     margin-right: 10%;
     width: 12%;
     fill: var(--primary-color);
     transition: fill 0.25s;
 }
 
-footer svg:hover{
+footer svg:hover {
     fill: var(--highlight-color);
+}
+
+/* nous contacter / nous trouver / mentions légales */
+footer div:nth-child(5) {
+    grid-column: 10 / span 2;
+}
+
+/* kirby / les yeux vairons */
+footer div:last-child {
+    grid-column: 10 / span 3;
+    grid-row-start: 4;
 }
