--- a/maj/assets/css/media-queries.css
+++ b/maj/assets/css/media-queries.css
@@ -1,73 +1,107 @@
-@media only screen and (max-width: 450px){
-    header, main{
+@media only screen and (max-width: 450px) {
+
+    /* conteneurs */
+    header,
+    main {
+        /* mise en place de la grille */
         display: grid;
         grid-template-columns: repeat(3, 1fr);
     }
 
-    h1{
+    footer {
+        /* mise en place de la grille */
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    /* titres */
+    h1 {
         font-size: 6vw;
     }
 
-    h2{
+    h2 {
         font-size: 5vw;
     }
 
-    p{
+    /* textes */
+    p {
         font-size: 3.5vw;
     }
 
-    a{
+    /* liens */
+    a,
+    .load-more {
         font-size: 3.5vw;
     }
-    
-    header #logo img{
+
+    /* //////////////////// éléments du header //////////////////// */
+
+    /* logo MAJ */
+    header #logo img {
         width: 35vw;
     }
 
-    header #description{
+    header #description {
         margin-left: 38%;
     }
 
-    #entrez, #qui{
-        grid-column: 2;
-        margin-left: 25%;
-    }
-    
-    header nav{
+    /* entrer / qui ? / nav */
+    #entrer,
+    #qui,
+    header nav {
         grid-column: 2;
         margin-left: 10%;
+        font-size: 3.5vw;
     }
-    
-    header nav ul{
+
+    #entrer svg {
+        width: 2vw;
+    }
+
+    /* navbar */
+    header nav ul {
         gap: 4%;
     }
 
-    header nav ul li a{
+    header nav ul li a {
         font-size: 4vw;
     }
 
-    main > *{
+    /* //////////////////// éléments du main //////////////////// */
+
+    main {
+        margin: 12% 0 10% 0;
+    }
+
+    /* tous les éléments du main */
+    main>* {
         grid-column: 1 / span 3;
     }
 
-    #a-propos p:first-child{
-        font-size: 6vw;
+    /* accueil > à propos */
+    #a-propos p:first-child {
+        font-size: 7vw;
     }
-    
-    #a-propos section h1{
+
+    #a-propos section h1 {
         font-size: 5vw;
     }
-    
-    #a-propos section p{
+
+    #a-propos section p {
         font-size: 4.5vw;
     }
 
-    #ticker .splide__slide{
+    /* actualités > ticker + slider */
+    #ticker {
+        margin-bottom: 8%;
+    }
+
+    #ticker .splide__slide {
         max-width: 100vw;
         max-height: 12vw;
     }
 
-    #ticker p{
+    #ticker p {
         font-size: 3vw;
     }
 
@@ -79,124 +113,163 @@
         top: 100%;
     }
 
-    #slider .splide__pagination__page{
+    #slider .splide__pagination__page {
         width: 7px;
         height: 7px;
     }
 
-    .actualite{
+    /* actualités > billets actualités */
+    .actualite {
         grid-column: span 3;
         margin: 0 2% 2% 0;
         padding: 5%;
         height: auto;
     }
 
-    .actualite a{
-        font-size: 4vw;
+    .actualite h1 {
+        font-size: 5vw;
     }
 
-    .load-more {
-        font-size: 3vw;
-    }
-
+    /* services > boutons */
     .accordion-button h1 {
         font-size: 4.5vw;
     }
 
-    .accordion-panel .partenaires img{
-        max-height: 50px;
+    /* services > accordion-panel */
+    .accordion-panel .partenaires img {
+        max-height: 9vw;
     }
 
-    .accordion-panel h2{
+    .accordion-panel h2 {
         font-size: 3.5vw;
     }
 
-    .accordion-panel p:last-child{
+    .accordion-panel p:last-child {
         margin-bottom: 3%;
     }
 
-    .accordion-panel > #partenaires{
+    .accordion-panel>#permanences-partenaires {
         grid-template-columns: repeat(2, 1fr);
     }
 
-    #partenaires img{
+    #permanences-partenaires img {
         margin-bottom: 5%;
         width: auto;
         max-height: 40px;
     }
 
-    #partenaires h2{
-        font-size: 3vw;
+    #permanences-partenaires h2 {
+        font-size: 3.8vw;
     }
 
-    article p{
-        font-size: 3.5vw;
+    /* actualités / services / adhésion / mentions légales > articles */
+    .retour {
+        font-size: 4vw;
+        margin-bottom: 5%;
     }
 
-    #equipe .membre{
-        align-content: center;
+    article>h1,
+    h2 {
         margin-bottom: 3%;
     }
 
-    #equipe h1{
-        font-size: 5.5vw;
+    article h2 {
+        font-size: 5vw;
     }
 
-    #equipe .membre .infos *{
-        font-size: 2.2vw;
+    article h3 {
+        font-size: 4vw;
     }
 
-    form input:not(input[type=submit]), form select, form textarea{
-        width: 95%;
+    article p {
+        margin-bottom: 5%;
     }
 
-    footer{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+    article ul {
+        padding-left: 5%;
+        font-size: 3.5vw;
     }
 
-    footer div:first-child{
+    /* équipe */
+    #equipe .membre {
+        flex-flow: column wrap;
+        align-items: flex-start;
+        margin-bottom: 5%;
+    }
+
+    #equipe h1 {
+        font-size: 6vw;
+    }
+
+    #equipe .membre .infos * {
+        margin: 0;
+        font-size: 3vw;
+    }
+
+    /* contact > formulaire */
+    form label {
+        font-size: 3.5vw;
+    }
+
+    form input:not(input[type=submit]),
+    form select,
+    form textarea {
+        width: 90vw;
+    }
+
+    /* //////////////////// éléments du footer //////////////////// */
+
+    /* partenaires */
+    footer div:first-child {
         grid-column: 1 / span 2;
         flex-flow: row wrap;
         justify-content: flex-start;
+        margin: 10% 0 5% 0;
     }
 
     footer img {
-        max-height: 35px;
+        margin: 0 5% 5% 0;
+        max-height: 12vw;
     }
 
-    footer div:nth-child(2){
+    /* maj */
+    footer div:nth-child(2) {
         grid-column: span 2;
     }
 
-    footer > div:nth-child(3){
+    /* adhésion */
+    footer>div:nth-child(3) {
         grid-column: 1 / span 1;
     }
 
-    footer > div:nth-child(4){
+    /* infos / réseaux sociaux */
+    footer>div:nth-child(4) {
         grid-column: 2 / span 1;
     }
 
     footer div:nth-child(3) p,
-    footer div:nth-child(4) p{
+    footer div:nth-child(4) p {
         margin-bottom: 2%;
     }
 
-    footer div:nth-child(5){
+    /* logo réseaux sociaux */
+    footer #socials {
+        margin: 2% 0 0 0;
+    }
+    
+    footer svg {
+        margin-right: 5%;
+        width: 8%;
+    }
+
+    /* nous contacter / nous trouver / mentions légales */
+    footer div:nth-child(5) {
         grid-column: 1 / span 1;
     }
 
-    footer div:last-child{
+    /* kirby / les yeux vairons */
+    footer div:last-child {
         grid-column: 2 / span 1;
         align-self: flex-end;
-    }
-
-    footer #socials{
-        margin: 2% 0 0 0;
-    }
-
-    footer svg{
-        margin-right: 5%;
-        width: 8%;
     }
 }
